--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "generate-howls",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Convert audio files and generate Howls at development and build time.",
-  "bin": {
-    "generate-howls": "src/cli.js"
+  "scripts": {
+    "prepublish": "tsc"
   },
-  "author": "Hubol"
+  "bin": {
+    "generate-howls": "dist/cli.js"
+  },
+  "author": "Hubol",
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "typescript": "^3.9.7"
+  }
 }
