--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "generate-howls",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Convert audio files and generate Howls at development and build time.",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "prepublish": "tsc"
   },
   "bin": {
     "generate-howls": "dist/cli.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hubol/good-sound.git"
+  },
   "author": "Hubol",
+  "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.0.27",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "pissant": "^0.1.2",
+    "pissant-node": "^0.1.1"
   }
 }
